add contact page

--- a/contact.html
+++ b/contact.html
@@ -53,22 +53,23 @@
         <div class="row">
           <div class="col-md-2"></div>
           <div class="col-md-8 main-font">
-            <b><p>The average family deals with 9 legal issues every year.  But, most navigate these issues alone without the help of an attorney.</p>
 
-              <p>Quick Legal Consult offers Florida consumers access to an phone consultation with an attorney for a flat rate.</p>
 
-            <p>Not all legal questions are complex, in fact most are fairly simple. For a flat rate of $50, you can get an advice on how best to proceed.  If your question ends up being one of the rare complex ones, you will be referred to a specialist.</p>
-
-            <p>Give yourself the peace of mind by consulting an attorney when faced with a legal problem.
-            </p></b>
           </div>
         </div>
-          <div class="container spacer"></div>
-          <div class="container spacer"></div>
-          <div class="container spacer"></div>
-          <div class="container spacer"></div>
-          <div class="container spacer"></div>
-          <div class="container spacer"></div>
+        <!-- Form -->
+<div class="container">
+  <div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8 text-center">
+                  <b><p>Give yourself the peace of mind by consulting an attorney when faced with a legal problem.
+            </p></b>
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSevVabC4SqUl2aUc2IuXtVTzNIUdGvXHuIUJAjHZqIAB3vrJA/viewform?embedded=true" width="100%" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+    </div>
+    <div></div>
+  </div>
+</div>
+
 
       </div>
 <!-- Student Loans -->
