--- a/contact.html
+++ b/contact.html
@@ -53,28 +53,24 @@
         <div class="row">
           <div class="col-md-2"></div>
           <div class="col-md-8 main-font">
+            <b>
 
-
+            <p>Give yourself the peace of mind by consulting an attorney when faced with a legal problem.
+            </p></b>
           </div>
         </div>
-        <!-- Form -->
+
+      </div>
+<!-- Student Loans -->
 <div class="container">
   <div class="row">
     <div class="col-md-2"></div>
     <div class="col-md-8 text-center">
-                  <b><p>Give yourself the peace of mind by consulting an attorney when faced with a legal problem.
-            </p></b>
-
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfhDmCCGisBHSmNgNEQk7spIpl8O15OXScl4w3UsVDY_jBtxw/viewform?embedded=true" width="100%" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
     <div></div>
   </div>
 </div>
-
-
-      </div>
-<!-- Student Loans -->
-
 <!--FOOTER-->
     <footer id="footer" class="footer text-center">
       <div class="container">
